Crash when adding multiple Adjustment layers and then deleting one of them #97507

Closed
opened 2022-04-21 12:26:07 +02:00 by a · 16 comments

System Information
Operating system: Windows 8.1
Graphics card: NVIDIA GeForce GT 750M (5+years old)

Blender Version
Broken: 3.2.0 Alpha 2882cbe685
Worked: 3.1.0

Adding multiple Adjustment layers, and then deleting one of them will cause a crash. Reported to be an access violation.

Exact steps for others to reproduce the error

  1. Default startup
  2. Change Editor Type to 'Video Sequencer'
  3. Change View Type to 'Sequencer & Preview'
  4. Add adjustment layer
  5. Add second adjustment layer
  6. Add third adjustment layer
  7. Add curves modifier to third adjustment layer
  8. Delete first adjustment layer (using keyboard X key in VSE)
  9. Crash

Supporting Video

https://youtu.be/YR_a8uQv1es

**System Information** Operating system: Windows 8.1 Graphics card: NVIDIA GeForce GT 750M (5+years old) **Blender Version** Broken: 3.2.0 Alpha 2882cbe685e7 Worked: 3.1.0 Adding multiple Adjustment layers, and then deleting one of them will cause a crash. Reported to be an access violation. **Exact steps for others to reproduce the error** 1. Default startup 2. Change Editor Type to 'Video Sequencer' 3. Change View Type to 'Sequencer & Preview' 4. Add adjustment layer 5. Add second adjustment layer 6. Add third adjustment layer 7. Add curves modifier to third adjustment layer 8. Delete first adjustment layer (using keyboard X key in VSE) 9. Crash **Supporting Video** https://youtu.be/YR_a8uQv1es
Author

Added subscriber: @blenderbug12345

Added subscriber: @blenderbug12345
Author
[system-info.txt](https://archive.blender.org/developer/F13014078/system-info.txt)
Author
[blender.crash.txt](https://archive.blender.org/developer/F13014083/blender.crash.txt)
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Thanks for the report. I cannot reproduce anymore on current master.
Crash is already fixed by 3cef9ebaf8
Please download and test latest 3.2 build from buildbot: https://builder.blender.org/download/daily
Feel free to comment if you can still replicate crash.

Thanks for the report. I cannot reproduce anymore on current master. Crash is already fixed by 3cef9ebaf8 Please download and test latest 3.2 build from buildbot: https://builder.blender.org/download/daily Feel free to comment if you can still replicate crash.
Member

Closed as duplicate of #97356

Closed as duplicate of #97356
Author

The crash is still there in blender-3.2.0-alpha+master.179100c02126-windows.amd64-release

The crash is still there in blender-3.2.0-alpha+master.179100c02126-windows.amd64-release
Author

I added a video demonstrating the crash on 179100c021

https://youtu.be/YR_a8uQv1es

I added a video demonstrating the crash on 179100c02126 https://youtu.be/YR_a8uQv1es
Member

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Yes, can confirm. Crash does not occur if preview window is not active
cc @iss

Yes, can confirm. Crash does not occur if preview window is not active cc @iss
Pratik Borhade changed title from EXCEPTION_ACCESS_VIOLATION when adding multiple Adjustment layers, and then deleting one of them to Crash when adding multiple Adjustment layers and then deleting one of them 2022-04-22 11:23:53 +02:00
Author

Bump!

The current definition of SEQ_get_channels_by_seq is broken, it doesn't return channels. I think the idea was to do this instead:

ListBase *SEQ_get_channels_by_seq(ListBase *seqbase, ListBase *channels, const Sequence *seq)
{
  ListBase *lb = NULL;

  LISTBASE_FOREACH (Sequence *, iseq, seqbase) {
    if (seq == iseq) {
      return channels;
    }
    if ((lb = SEQ_get_channels_by_seq(&iseq->seqbase, &iseq->channels, seq))) {
      return lb;
    }
  }

  return NULL;
}

This code works for me when tested against the steps which crash the VSE.

Bump! The current definition of SEQ_get_channels_by_seq is broken, it doesn't return channels. I think the idea was to do this instead: ``` ListBase *SEQ_get_channels_by_seq(ListBase *seqbase, ListBase *channels, const Sequence *seq) { ListBase *lb = NULL; LISTBASE_FOREACH (Sequence *, iseq, seqbase) { if (seq == iseq) { return channels; } if ((lb = SEQ_get_channels_by_seq(&iseq->seqbase, &iseq->channels, seq))) { return lb; } } return NULL; } ``` This code works for me when tested against the steps which crash the VSE.
Author

Called as:

...
ListBase *channels = SEQ_get_channels_by_seq(&ed->seqbase, &ed->channels, seq);
...

Called as: ... ListBase *channels = SEQ_get_channels_by_seq(&ed->seqbase, &ed->channels, seq); ...

@blenderbug12345 Thanks for snippet, your code is correct. I was confused for a bit before I noticed pointer to seqbase is being returned.

@blenderbug12345 Thanks for snippet, your code is correct. I was confused for a bit before I noticed pointer to seqbase is being returned.

This issue was referenced by 38a4d96a90

This issue was referenced by 38a4d96a9061808677d3bc770f1482766fe3f3ed

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-05-03 09:09:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97507
No description provided.