Fix T97507: Crash when deleting adjustment layer

Issue was not properly fixed in 3cef9ebaf81 due to oversight.
`SEQ_get_channels_by_seq` returned pointer to `seqbase` instead of `channels`.