source/blender/sequencer/SEQ_channels.h
@@ -29,7 +29,9 @@ char *SEQ_channel_name_get(struct ListBase *channels, const int channel_index);
 bool SEQ_channel_is_locked(const struct SeqTimelineChannel *channel);
 bool SEQ_channel_is_muted(const struct SeqTimelineChannel *channel);
 int SEQ_channel_index_get(const struct SeqTimelineChannel *channel);
-ListBase *SEQ_get_channels_by_seq(struct ListBase *seqbase, const struct Sequence *seq);
+ListBase *SEQ_get_channels_by_seq(struct ListBase *seqbase,
+                                  struct ListBase *channels,
+                                  const struct Sequence *seq);
 
 #ifdef __cplusplus
 }
